--- a/css/style.css
+++ b/css/style.css
@@ -10856,9 +10856,9 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light.scrolled .navbar-brand {
   color: #000000;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-size: 24px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  /* font-size: 24px; */
 }
 
 .navbar-brand {
@@ -10867,18 +10867,23 @@ h1, h2, h3, h4, h5,
   position: relative;
   z-index: 0;
 }
-
-.navbar-brand:after {
+.navbar-brand span{
+  position: relative;
+  display: inline-block;
+  margin-right: 4px;
+  line-height: 40px;
+}
+.navbar-brand span:after {
   position: absolute;
   top: 50%;
-  left: -12px;
+  left: 50%;
   width: 40px;
   height: 40px;
   content: '';
   background: #3e64ff;
   z-index: -1;
   -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+  transform: translateY(-50%) translateX(-50%);
   border-radius: 50%;
 }
 
@@ -13231,4 +13236,30 @@ textarea.form-control {
   .shadowBox {
     padding: 0px !important;
   }
+}
+
+.portfolio-section .p-item{
+  position: relative;
+}
+
+.portfolio-section .p-item .fluidbox--ready{
+  position: relative;
+}
+.portfolio-section .p-item .fluidbox--ready::after{
+  content: '';
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 999;
+  opacity: 0;
+  transition: opacity 500ms;
+}
+.portfolio-section .p-item .fluidbox--ready:hover::after{
+  opacity: 1;
+}
+
+.fluidbox--loaded{
+  z-index: 99999;
 }
